--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="app.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = "top" id = "top">
-        <div class="top-top" id="top-top"></div>
-        <div class = "top-base" id ="top-base">
-            <div></div>
-            <div></div>
+    <div class="all" id="all">
+        <div class = "top" id = "top">
+            <div class="top-top" id="top-top"></div>
+            <div class = "top-base" id ="top-base">
+                <div id="top-a" class="top-a"><p>Box1</p></div>
+                <div id="top-b" class="top-b"><p>Box2</p></div>
+                <div id="top-c" class="top-c"><p>Box3</p></div>
+                <div id="top-d" class="top-d"><p>Box4</p></div>
+                <div id="top-e" class="top-e"><p>Box5</p></div>
+            </div>
+           
+        </div>
+        <div id ="main" class="main">
+            <div id="main-left" class="main-left" ></div>
+            <div id="main-rigth" class="main-rigth">
+                <div id="card" class="card"><p>card 1</p></div>
+                <div id="card" class="card"><p>card 2</p></div>
+                <div id="card" class="card"><p>card 3</p></div>
+                <div id="card" class="card"><p>card 4</p></div>
+                <div id="card" class="card"><p>card 5</p></div>
+                <div id="card" class="card"><p>card 6</p></div>
+                <div id="card" class="card"><p>card 7</p></div>
+                <div id="card" class="card"><p>card 8</p></div>
+            </div>
+        </div>
+        <div id="base" class="base">
             <div></div>
             <div></div>
             <div></div>
         </div>
     </div>
-    <div id ="main" class="main">
-        <div id="main-left" class="main-left"></div>
-        <div id="main-rigth" class="main-rigth"></div>
-    </div>
+    <script src="app.js"></script>
 </body>
 </html>
